--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -1,10 +1,12 @@
+{% load static%}
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Linux Terminal Simulation</title>
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="{% static 'styles.css' %}" />
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     </head>
     <body>
         <div class="terminal">
@@ -14,6 +16,6 @@
                 <input type="text" class="input" autofocus />
             </div>
         </div>
-        <script src="scripts.js"></script>
+        <script src="{% static 'scripts.js' %}"></script>
     </body>
 </html>
